# sane-coco

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: explanations.mdc  no-comments.mdc
data/crowdpose/: example_crowdpose_preds.json  example_crowdpose_val.json
data/lvis/: lvis_results_100.json  lvis_val_100.json
notebooks/: ultralytics_coco.ipynb
sane_coco/: __init__.py  __main__.py  dataset.py  eval.py  mask.py  matching.py  metrics.py  models.py  numba.py  types.py  util.py  validation.py
tests/: conftest.py  test_coco.py  test_coco_dataset.py  test_crowd.py  test_lvis.py  test_matching.py  test_metrics.py  test_models.py  test_regression.py  test_sane_coco_regression.py  test_segmentation.py  test_torchmetrics.py
tests/data/: sample_coco.json  sample_results.json
